// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docsVersion first time versioning 1`] = `
Object {
  "version-1.0.0/docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "collapsed": true,
          "items": Array [
            Object {
              "id": "version-1.0.0/foo/bar",
              "type": "doc",
            },
            Object {
              "id": "version-1.0.0/foo/baz",
              "type": "doc",
            },
          ],
          "label": "foo",
          "type": "category",
        },
        Object {
          "href": "https://github.com",
          "label": "Github",
          "type": "link",
        },
        Object {
          "id": "version-1.0.0/hello",
          "type": "ref",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-1.0.0/hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`docsVersion not the first time versioning 1`] = `
Object {
  "version-2.0.0/docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-2.0.0/foo/bar",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "id": "version-2.0.0/hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`docsVersion second docs instance versioning 1`] = `
Object {
  "version-2.0.0/community": Array [
    Object {
      "id": "version-2.0.0/team",
      "type": "doc",
    },
  ],
}
`;
